# proposal-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
proposal_pipeline/: __init__.py  _post_install.py  _resources.py  cli.py  config.py
proposal_pipeline/curriculum/: models.py
proposal_pipeline/data/: curriculum_reference.json  curriculum_schema.md  samsung_life_midjourney.json  test_hyundai_rnd.json  test_midjourney.json
proposal_pipeline/gamma/: __init__.py  client.py  models.py
proposal_pipeline/image_gen/: renderer.py
proposal_pipeline/pipeline/: __init__.py  models.py  pipeline.py
proposal_pipeline/pptx_merger/: __init__.py  merger.py
proposal_pipeline/pptx_replacer/: __init__.py  replacer.py
proposal_pipeline/templates/: README.md
proposal_pipeline/templates/dummy/: 약관.pptx  표지.pptx  회사소개.pptx
proposal_pipeline/templates/parts/: 00_표지.pptx  README.md  part_구간표지.pptx  part_산출물.pptx  part_설계배경.pptx  part_설득.pptx  part_타임테이블.pptx
proposal_pipeline/templates/rules/: README.md  icons.json  tokens.json
proposal_pipeline/templates/visuals/: README.md  design_bg.html  framework.html  gap_analysis.html  roadmap.html  roi.html  solution.html
tests/: test_e2e.py  test_gamma.py  test_pipeline.py  test_pptx_merge.py  test_pptx_replace.py
tools/: split_pptx.py
